--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -16,23 +16,27 @@
   <string name="app_setting_xiaoai">Mi AI-painike</string>
   <string name="book_arr_city">目的地</string>
   <string name="book_dep_city">出发地</string>
-  <string name="book_his">历史行程</string>
-  <string name="book_input_lack">请完成所有必填项目</string>
-  <string name="book_save_fail">添加行程数据失败，请重新保存</string>
-  <string name="book_save_sucess">添加行程数据成功</string>
+  <string name="book_his">Varaushistoria</string>
+  <string name="book_input_lack">Täytä ensin kaikki vaaditut alueet</string>
+  <string name="book_save_fail">Varausta ei voitu lisätä. Yritä uudelleen.</string>
+  <string name="book_save_sucess">Varaus lisättiin onnistuneesti</string>
   <string name="didi_app_name">DiDi</string>
   <string name="express_setting_other">Muu</string>
   <string name="miot_device_add_device">添加设备</string>
   <string name="miot_device_all_device">全部设备</string>
+  <string name="miot_device_camera_size">%d个摄像机</string>
   <string name="miot_device_cancel">取消</string>
   <string name="miot_device_card_title">Mi Home</string>
   <string name="miot_device_click_show_detail">点击了解智能家居</string>
-  <string name="miot_device_cta_and">及</string>
-  <string name="miot_device_cta_message">将智能设备添加至此，实现快捷操控。如您点击“授权开启”则表示您同意米家APP</string>
-  <string name="miot_device_cta_priv">隐私协议</string>
-  <string name="miot_device_cta_use_info">使用条款</string>
+  <string name="miot_device_click_show_img">点击查看画面</string>
+  <string name="miot_device_cta_and">ja</string>
+  <string name="miot_device_cta_end">. (</string>
+  <string name="miot_device_cta_message">Lisää älylaitteitasi hallitaksesi niitä. Hyväksy napauttamalla Valtuuta</string>
+  <string name="miot_device_cta_priv">Tietosuojakäytäntö</string>
+  <string name="miot_device_cta_use_info">Mi Home Käyttöehdot</string>
   <string name="miot_device_edit">编辑</string>
-  <string name="miot_device_empty_text">添加空气净化器、摄像机、扫地机器人等智能设备，实现快捷操控。</string>
+  <string name="miot_device_empty_text">Lisää ilmanpuhdistaja, kamera, robotti-imuri tai muista älylaitteita hallitaksesi niitä.</string>
+  <string name="miot_device_hide_frame_toast">进入负一屏不显示画面</string>
   <string name="miot_device_install_mijia">去下载</string>
   <string name="miot_device_introduction">实现智能设备快捷操控</string>
   <string name="miot_device_loading">数据加载中</string>
@@ -42,6 +46,8 @@
   <string name="miot_device_mijia_uninstall_message">您的手机尚未安装“米家APP”，因此无法启用相关功能。是否去应用商店下载？</string>
   <string name="miot_device_mijia_uninstall_title">尚未安装</string>
   <string name="miot_device_network_error">当前网络未连接</string>
+  <string name="miot_device_no_recent_frame">点击查看</string>
+  <string name="miot_device_show_frame_toast">进入负一屏显示画面</string>
   <string name="miot_device_shrink_list">收起列表</string>
   <string name="net_unavailable">Verkkoyhteyttä ei voitu muodostaa.</string>
   <!-- MIUI 10 valmis -->
@@ -301,13 +307,13 @@
   <string name="app_label">Sovellusholvi</string>
   <string name="apps">Suositellut sovellukset</string>
   <string name="apps_label">Sovellukset</string>
-  <string name="arr_airport">到达机场</string>
-  <string name="arr_airport_example">例：上海浦东T2</string>
-  <string name="arr_city">到达城市</string>
-  <string name="arr_city_example">例：上海</string>
-  <string name="arr_city_station">到达城市和车站</string>
-  <string name="arr_city_station_example">例：上海虹桥站</string>
-  <string name="arr_time">到达时间</string>
+  <string name="arr_airport">Määränpään lentokenttä</string>
+  <string name="arr_airport_example">Esim. Shanghai Pudong T2</string>
+  <string name="arr_city">Saavutaan</string>
+  <string name="arr_city_example">Esim. Shanghai</string>
+  <string name="arr_city_station">Saavutaan</string>
+  <string name="arr_city_station_example">Esim. Shanghai Hongqiao</string>
+  <string name="arr_time">Saapumisaika</string>
   <string name="arrive">Laskeutuu</string>
   <string name="assistant_day_deadline">Viimeinen päivä</string>
   <string name="assistant_day_suffix">后</string>
@@ -356,11 +362,11 @@
   <string name="bl_open_failed_exit">手环开通失败</string>
   <string name="bl_validate_failed_change_pwd">手环校验失败将转密码支付</string>
   <string name="bluetooth_open_ok">蓝牙开启成功</string>
-  <string name="book_add">添加行程</string>
-  <string name="book_add_date_diff">请选择不同于入住时间的未来日期</string>
-  <string name="book_add_dialog_continue">继续填写</string>
-  <string name="book_add_dialog_exit">确认退出</string>
-  <string name="book_add_dialog_save">内容还未保存，确认退出将丢失已填信息</string>
+  <string name="book_add">Lisää varaus</string>
+  <string name="book_add_date_diff">Lähtöpäivämäärän täytyy olla myöhemmin, kuin saapusmispäivämäärän</string>
+  <string name="book_add_dialog_continue">Älä poistu</string>
+  <string name="book_add_dialog_exit">Poistu</string>
+  <string name="book_add_dialog_save">Hylätäänkö muutokset ja poistutaanko nyt?</string>
   <string name="book_assistant">Varaa matka</string>
   <string name="book_assistant_empty">Ei varauksia vielä.</string>
   <string name="book_assistant_go">Lähtö |  </string>
@@ -469,12 +475,12 @@
   <string name="data_error">Tapahtui virhe, odota minuutti tai kaksi ja yritä uudelleen</string>
   <string name="data_error_show">Tilaus on valmis, tietoja ei voi näyttää</string>
   <string name="delete">Poista</string>
-  <string name="dep_airport">出发机场</string>
-  <string name="dep_airport_example">例：首都机场T3</string>
-  <string name="dep_city">出发城市</string>
-  <string name="dep_city_example">北京</string>
-  <string name="dep_city_station">出发城市和车站</string>
-  <string name="dep_city_station_example">例：北京南站</string>
+  <string name="dep_airport">Lähtölentokenttä</string>
+  <string name="dep_airport_example">Esim. Beijing Capital T3</string>
+  <string name="dep_city">Lähtee</string>
+  <string name="dep_city_example">Beijing</string>
+  <string name="dep_city_station">Lähtee</string>
+  <string name="dep_city_station_example">Esim. Beijing Etelä</string>
   <string name="detail_action_delete">Poista</string>
   <string name="detail_action_open_in_browser">Avaa Selaimessa</string>
   <string name="detail_action_report_format_problem">Virheellinen muoto</string>
@@ -791,9 +797,9 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="feedback_cancel">取消</string>
   <string name="feedback_ok">反馈</string>
   <string name="feedback_tip_msg">亲，您是否遇到了支付问题？您可以选择告诉我们。</string>
-  <string name="flight">航班</string>
-  <string name="flight_num">航班号</string>
-  <string name="flight_num_example">例：CA1102</string>
+  <string name="flight">Lento</string>
+  <string name="flight_num">Lentonumero</string>
+  <string name="flight_num_example">Esim. CA1102</string>
   <string name="flow_open">Näytä mobiilidatan kortti</string>
   <string name="flow_setting_brief">Tarkastele datan käyttötietoja (Lisää datapakettisi paikassa Tietoturva &gt; Datan käyttö).</string>
   <string name="flybird_auto_switch_channel">系统推荐</string>
@@ -917,15 +923,15 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="hold_down_adjustment_order">Pidä kuvaketta oikealta raahataksesi kohteita</string>
   <string name="home">Koti</string>
   <string name="home_and_company">Koti &amp; työ</string>
-  <string name="hotel">酒店</string>
-  <string name="hotel_checkin">入住时间</string>
-  <string name="hotel_checkout">退房时间</string>
-  <string name="hotel_city">酒店所在城市</string>
-  <string name="hotel_city_example">例：北京</string>
-  <string name="hotel_name">酒店名称</string>
-  <string name="hotel_name_example">例：小米酒店</string>
-  <string name="hotel_passenger_name">酒店电话</string>
-  <string name="hotel_phone">例：010-65286666</string>
+  <string name="hotel">Hotelli</string>
+  <string name="hotel_checkin">Sisäänkirjautuminen</string>
+  <string name="hotel_checkout">Uloskirjautuminen</string>
+  <string name="hotel_city">Hotellin sijainti</string>
+  <string name="hotel_city_example">Esim. Helsinki</string>
+  <string name="hotel_name">Hotellin nimi</string>
+  <string name="hotel_name_example">Esim. Xiaomi Hotelli</string>
+  <string name="hotel_passenger_name">Puhelinnumero</string>
+  <string name="hotel_phone">Esim. 040-123-4567</string>
   <string name="hour12_format_en">hh:mm</string>
   <string name="hour24_format_en">HH:mm</string>
   <string name="http_stock_error">Tietoja ei voitu ladata</string>
@@ -1263,8 +1269,8 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="open_bluetooth_now">蓝牙开启中...</string>
   <string name="open_bluetooth_tips">请开启蓝牙来允许\"手环\"连接到配件</string>
   <string name="opened">Käytössä</string>
-  <string name="passenger_name">乘客姓名</string>
-  <string name="passenger_name_example">例：张三</string>
+  <string name="passenger_name">Matkustajan nimi</string>
+  <string name="passenger_name_example">Esim. Matti Meikäläinen</string>
   <string name="pay_card_pack">Mi Pay</string>
   <string name="paycode_parent">Alipay</string>
   <string name="paycode_sdk_parent">Maksun pikavalinta</string>
@@ -1368,7 +1374,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="req_no_data">Tietoja ei saatu</string>
   <string name="req_no_sdata">Tuloksia ei löytynyt</string>
   <string name="retry">Yritä uudelleen</string>
-  <string name="save">保存</string>
+  <string name="save">Tallenna</string>
   <string name="save_edit">Tallenna muutokset</string>
   <string name="save_to_note">转存至便签</string>
   <string name="scan">Skannaa</string>
@@ -1586,18 +1592,18 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="toast_reach_text_limit_truncate">Muistiosi on liian pitkä. Ylimääräinen sisältö lyhennettiin.</string>
   <string name="total_month_desc_text">Tässä kuussa</string>
   <string name="total_today_desc_text">Tänään</string>
-  <string name="train">火车</string>
-  <string name="train_C">C juna</string>
-  <string name="train_D">D juna</string>
-  <string name="train_G">G juna</string>
-  <string name="train_K">K juna</string>
-  <string name="train_T">T juna</string>
-  <string name="train_Z">Z juna</string>
+  <string name="train">Juna</string>
+  <string name="train_C">C-juna</string>
+  <string name="train_D">D-juna</string>
+  <string name="train_G">G-juna</string>
+  <string name="train_K">K-juna</string>
+  <string name="train_T">T-juna</string>
+  <string name="train_Z">Z-juna</string>
   <string name="train_normal">Tavallinen juna</string>
-  <string name="train_num">列车车次</string>
-  <string name="train_num_example">例：G101</string>
-  <string name="train_seat">座位号</string>
-  <string name="train_seat_example">例：03车05F座</string>
+  <string name="train_num">Junan numero</string>
+  <string name="train_num_example">Esim. G101</string>
+  <string name="train_seat">Paikka</string>
+  <string name="train_seat_example">Esim. Vaunu 03, Paikka 05F</string>
   <string name="trans_card">Matkakortti</string>
   <string name="transit_subway">Julkinen liikenneväline</string>
   <string name="trip_assistant_all_btn">Kaikki matkat</string>
