--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -279,6 +279,7 @@ Järjestelmänvalvoja voi valvoa tähän käyttäjäprofiiliin liittyviä asetuk
   <string name="allow_bind_app_widget_activity_allow_bind_title">Luo widget ja salli käyttö?</string>
   <string name="allow_bind_app_widget_activity_always_allow_bind">%1$s saa luoda widgetejä ja käyttää niiden tietoja</string>
   <string name="allow_data_usage_title">Salli roaming-tiedonsiirto</string>
+  <string name="allow_device_id_access">Sovellukset, joilla on pääsy Laitteen ID:seen</string>
   <string name="allow_mock_location">Salli sijaintien imitointi</string>
   <string name="allow_mock_location_summary">Salli sijaintien imitointi</string>
   <string name="allow_overlay_description">Anna sovelluksen näkyä muiden avoimien sovellusten päällä. Se voi häiritä muiden sovellusten käyttöä tai muuttaa niiden ulkoasua tai vaikutelmaa käyttäytymisestä.</string>
@@ -1553,6 +1554,7 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="device_display_layout_title">Ominaisuudet</string>
   <string name="device_edit_title">Nimeä laite uudelleen</string>
   <string name="device_feedback">Lähetä palautetta tästä laitteesta</string>
+  <string name="device_id">Laitteen ID</string>
   <string name="device_info_default">Tuntematon</string>
   <string name="device_info_label">Laitteen tiedot</string>
   <string name="device_info_not_available">Ei käytettävissä</string>
@@ -1761,6 +1763,8 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="enableNetwork">enableNetwork</string>
   <string name="enable_adb">USB-vianetsintä</string>
   <string name="enable_adb_summary">Vianetsintätila USB-liitännän ollessa käytössä</string>
+  <string name="enable_atrace">Ota ATrace käyttöön</string>
+  <string name="enable_atrace_summary">Tallenna Kernel-tapahtumat käyttäen ATracea</string>
   <string name="enable_compatibility">Muuta sovelluksen kokoa</string>
   <string name="enable_freeform_support">Ota käyttöön vapaamuotoiset ikkunat</string>
   <string name="enable_freeform_support_summary">Ota kokeellisten vapaamuotoisten ikkunoiden tuki käyttöön.</string>
@@ -3483,6 +3487,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="pref_manage_bg_network">Hallitse sovelluksien taustaverkkoyhteyttä</string>
   <string name="pref_new_installed_preconfig_title">Uusien sovelluksien oletusasetukset</string>
   <string name="pref_operational_key">Navigointipainikkeet</string>
+  <string name="pref_show_lunar_calendar_title">Näytä perinteinen Kiinalainen kalenteri Lukitusnäytöllä</string>
   <string name="pref_title_lang_selection">Kieliasetukset</string>
   <string name="pref_title_update_notification">Datan käytön ilmoitukset</string>
   <string name="pref_volume_launch_camera_summary">Paina Äänenvoimakkuutta alas kaksi kertaa käynnistääksesi Kameran</string>
@@ -3819,6 +3824,11 @@ Bluetooth."</string>
   <string name="resolver_settings_label">Lajittele</string>
   <string name="restore_default_apn">Palautetaan APN-oletusasetuksia</string>
   <string name="restore_default_apn_completed">APN-oletusasetukset on palautettu.</string>
+  <string name="restore_device_id_content">Palauta henkilökohtaiset suositukset</string>
+  <string name="restore_device_id_title">Palauta laitteen ID</string>
+  <string name="restore_dialog_content">Laitteen ID:n palauttaminen palauttaa henkilökohtaiset suosituksesi.</string>
+  <string name="restore_dialog_positive">Palauta</string>
+  <string name="restore_dialog_title">Muistutus</string>
   <string name="restr_pin_enter_admin_pin">Anna järjestelmänvalvojan PIN-koodi</string>
   <string name="restrict_background_blacklisted">Taustatiedonsiirto ei käytössä</string>
   <string name="restrict_bg_app">Rajoita</string>
@@ -4612,7 +4622,6 @@ Laitteeseesi asennettu luotettu varmenne tekee tämän mahdolliseksi."</string>
   <string name="status_bar_settings_enable_notification">Näytä ilmoitukset</string>
   <string name="status_bar_settings_expand_top_notification">Laajenna ylin ilmoitus</string>
   <string name="status_bar_settings_expandable_under_keyguard">Näytä Lukitusnäytöllä</string>
-  <string name="status_bar_settings_function_description">Tietoja tästä ominaisuudesta</string>
   <string name="status_bar_settings_long_click_sort">Siirrä nappulaa painamalla sitä pohjassa</string>
   <string name="status_bar_settings_manage_notification">Sovellusilmoitukset</string>
   <string name="status_bar_settings_no_carrier">Ei mitään</string>
@@ -4624,6 +4633,7 @@ Laitteeseesi asennettu luotettu varmenne tekee tämän mahdolliseksi."</string>
   <string name="status_bar_settings_notification_shade_shortcut">Ilmoitusalueen pikakuvake</string>
   <string name="status_bar_settings_notification_sound">Ääni</string>
   <string name="status_bar_settings_notification_sound_custom">Mukautettu ääni</string>
+  <string name="status_bar_settings_notification_style">Ilmoituksien tyyli</string>
   <string name="status_bar_settings_notification_use_app_icon">Käytä sovelluskuvakkeita ilmoituksissa</string>
   <string name="status_bar_settings_notification_vibrate">Värinä</string>
   <string name="status_bar_settings_peek_notification_icon">Näytä kuvakkeet saapuville ilmoituksille</string>
