--- a/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
@@ -18,9 +18,9 @@
   <string name="act_weather_find_city_net_no_good">Verkkoyhteyttä ei voi muodostaa.</string>
   <string name="act_weather_find_city_no_result">Ei tuloksia</string>
   <string name="act_weather_find_city_searching">Etsitään…</string>
-  <string name="activity_alert_detail_title"/>
   <string name="activity_find_city_dialog_cancel">Peruuta</string>
-  <string name="activity_find_city_dialog_message">Salli Sää-sovelluksen nähdä sijaintisi</string>
+  <string name="activity_find_city_dialog_message">Salli Sään käyttää sijaintiasi saadakseen tarkempia sijaintitietoja</string>
+  <string name="activity_find_city_dialog_message_global">Salli Sään käyttää sijaintiasi ja vaihtaa sijaintitilan suureksi tarkkuudeksi saadakseen tarkempia sijaintitietoja.</string>
   <string name="activity_find_city_dialog_set">Asetukset</string>
   <string name="activity_find_city_dialog_title">Pääsy Sijaintiin</string>
   <string name="activity_main_clickable">&gt;</string>
@@ -41,6 +41,7 @@
   <string name="aqi_detail_24_hours">24-tunnin ennustus</string>
   <string name="aqi_detail_5_days">5-päivän ennustus</string>
   <string name="aqi_detail_co">CO</string>
+  <string name="aqi_detail_co_unit">Yksikkö: mg/m³</string>
   <string name="aqi_detail_no2">NO₂</string>
   <string name="aqi_detail_o3">O₃</string>
   <string name="aqi_detail_pm10">PM10</string>
@@ -51,6 +52,8 @@
   <string name="aqi_detail_title">Ilmanlaatuindeksi</string>
   <string name="aqi_detail_unit">Yksikkö: µg/m³</string>
   <string name="aqi_fifteen_dates_time_format">d.M.</string>
+  <string name="aqi_first_sub_desc_locate">Asema: %1$s (%2$s päässä)</string>
+  <string name="aqi_first_sub_desc_no_locate">Keskiarvo ILI sijainnissa %1$s</string>
   <string name="aqi_publish_source">Päivitetty %1$s, Päivittäjä CNEMC</string>
   <string name="aqi_publish_time">Päivitetty %1$s</string>
   <string name="aqi_quality_ambient_air_quality">Lähistön ilmanlaatu</string>
@@ -96,7 +99,7 @@
   <string name="content_desc_activity_main_more_settings">Lisäasetukset</string>
   <string name="content_desc_back_button">Takaisin</string>
   <string name="content_desc_city_manage_del">Poista</string>
-  <string name="content_desc_city_manage_edit">Hallitse kaupunkeja</string>
+  <string name="content_desc_city_manage_edit">Muokkaa</string>
   <string name="content_desc_close_button">Sulje</string>
   <string name="daily_forcast_drawer_on_bottom">Piilota</string>
   <string name="daily_forcast_no_stable_direction">Tuulahdus</string>
@@ -112,17 +115,20 @@
   <string name="daily_forecast_detail_date">d.M.</string>
   <string name="daily_forecast_no_data">"Säätietojen haku epäonnistui
 Vedä alaspäin päivittääksesi tai tarkasta verkkoasetukset"</string>
-  <string name="data_provided_by">Tiedot tarjoaa</string>
+  <string name="data_provided_by">Tiedot tarjoaa osittain</string>
   <string name="edit_alert_city_title">Hallitse hälytyksiä</string>
   <string name="edit_city">Muokkaa kaupunkia</string>
   <string name="eu_region_version_first_start_network_msg">Käyttämällä tätä tuotetta hyväksyt, että tämä tuote yhdistää verkkoon, kerää, käsittelee ja käyttää henkilötietojasi mukaan lukien hakemiesi kaupunkien koordinaatteja ja muita tietoja lueteltu Tietosuojakäytännössämme. Tutustu Tietosuojakäytäntöömme lukeaksesi, kuinka keräämme ja käsittelemme tietoja. Napauttamalla \"Hyväksyn\", hyväksyt Xiaomin %1$s ja %2$s.</string>
-  <string name="feedback_heavy_rain">Rankka sade</string>
-  <string name="feedback_heavy_snow">Lunta</string>
-  <string name="feedback_light_rain">Kevyt sade</string>
+  <string name="feedback_cloudy">Pilvinen</string>
+  <string name="feedback_foggy">Sumuinen</string>
+  <string name="feedback_haze">Usva</string>
+  <string name="feedback_moderate_rain">Sade</string>
+  <string name="feedback_moderate_snow">Lumisade</string>
   <string name="feedback_overcast">Pilvinen</string>
+  <string name="feedback_report_privacy_msg">Ilmoitus sisältää sijaintitietosi</string>
   <string name="feedback_result_fail_no_choice">Valitse nykyinen sääolosuhde</string>
   <string name="feedback_result_success">Lähetettiin onnistuneesti, kiitos palautteestasi.</string>
-  <string name="feedback_sand">Hiekkaa</string>
+  <string name="feedback_sandy">Hiekkainen</string>
   <string name="feedback_sunny">Selkeä</string>
   <string name="first_start_network_msg">Tämä sovellus tarvitsee internet-yhteyden ja pääsyn sijaintiisi toimiakseen normaalisti.</string>
   <string name="first_start_network_title">Internet-yhteys ja sijainnin käyttö</string>
