--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -275,13 +275,15 @@ Aktivoi tilisi seuraamalla
   <string name="passport_identification_expired">Vahvistuskoodi on vanhentunut, aloita alusta</string>
   <string name="passport_imei_permission_denied_message">Pyydämme lupaa saada laitteesi IMEI-koodin. Mi Tili käyttää IMEI:tä tunnistaakseen laitteen, jolla kirjaudut sisään / luot tunnusta, jotta Mi Tilisi olisi turvassa.</string>
   <string name="passport_imei_permission_denied_title">IMEI käyttölupapyyntö</string>
-  <string name="passport_input_captcha_hint">Syötä koodi</string>
+  <string name="passport_input_captcha_hint">Anna koodi</string>
   <string name="passport_input_password_for_login">Tämä numero on liitettynä olemassa olevaan tiliin, syötä salasanasi</string>
-  <string name="passport_input_password_hint">Syötä salasana</string>
-  <string name="passport_input_phone_hint">Syötä puhelinnumero</string>
-  <string name="passport_input_vcode_hint">Syötä vahvistuskoodi</string>
+  <string name="passport_input_password_hint">Anna salasana</string>
+  <string name="passport_input_phone_hint">Anna puhelinnumero</string>
+  <string name="passport_input_phone_password">Anna puhelinnumeron %s salasana</string>
+  <string name="passport_input_vcode_hint">Anna vahvistuskoodi</string>
   <string name="passport_input_voice_captcha_hint">Anna äänivahvistuksen koodi</string>
   <string name="passport_input_voice_hint">Anna äänikoodi</string>
+  <string name="passport_international_register_by_email">Luo tili käyttäen sähköpostiosoitetta</string>
   <string name="passport_license_host_unreachable">Verkkoyhteyttä ei voi muodostaa. Voit katsoa tämän sivun osoitteessa %s.</string>
   <string name="passport_license_info_collapse">Tiivistä</string>
   <string name="passport_license_info_open">Tiedot</string>
@@ -373,7 +375,8 @@ Aktivoi tilisi seuraamalla
   <string name="passport_skip_setup_account_msg">Voit asettaa Mi Tilin myöhemmin Asetuksissa.</string>
   <string name="passport_skip_setup_account_title">Etkö käytä Mi Pilveä?</string>
   <string name="passport_sms_send_success">Lähetetty</string>
-  <string name="passport_sms_verification_code_login">Kirjaudu sisään tekstiviestillä</string>
+  <string name="passport_sms_verification_code_login">Kirjaudu sisään käyttäen tekstiviestiä</string>
+  <string name="passport_sms_verification_code_login_or_register">Kirjaudu tai rekisteröidy käyttäen tekstiviestiä</string>
   <string name="passport_sync_account_data">Synkronoidaan tilitietoja…</string>
   <string name="passport_sync_account_data_failed_warning">Tilitietojasi synkronoidaan nyt, voit kirjautua sisään käyttämällä Mi Tilisi ID:tä. Jos haluat kirjautua sisään käyttämällä puhelinnumeroasi tai sähköpostiosoitettasi, odota kunnes tiedot on kokonaan synkronoitu.</string>
   <string name="passport_title_reg">Luo tili</string>
