--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -179,8 +179,8 @@
   <string name="setting_alarm_arriving_title">Ilmoitus ennen hälytystä</string>
   <string name="settings">Asetukset</string>
   <string name="shut_down_keep_screen">Näyttöä ei pidetä päällä</string>
-  <string name="shutdown_alarm_disable_summary">Herätys ei soi laite sammutettuna</string>
-  <string name="shutdown_alarm_enable_summary">Herätys soi laite sammutettuna</string>
+  <string name="shutdown_alarm_disable_summary">Hälytys ei soi laite sammutettuna</string>
+  <string name="shutdown_alarm_enable_summary">Hälytys soi, jos se on asetettu vähintään 5 minuuttia laitteesi sammuttamisen jälkeen</string>
   <string name="shutdown_alarm_title">Sammutetun laitteen hälytys</string>
   <string name="silent_alarm_summary">Äänetön</string>
   <string name="skip_alarm_once_hint">Pois käytöstä kerran: %s</string>
