--- a/Finnish/main/MiuiScreenRecorder.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiScreenRecorder.apk/res/values-fi-rFI/strings.xml
@@ -71,6 +71,7 @@
   <string name="show_screen_touch_summary">Visualisoi eleet käyttäen valkoista pistettä</string>
   <string name="sound_source">Äänilähde</string>
   <string name="sound_source_summary">Järjestelmän äänet tai mikrofoni</string>
+  <string name="sound_source_summary_without_system_sounds">Käytä mikrofonia tai mykistä ääni</string>
   <string name="start">Aloita</string>
   <string name="start_recording">Aloita nauhoittaminen</string>
   <string name="storage_location">Tallennustila</string>
