--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -356,7 +356,7 @@ Jos et suorita päivitystä, kaksoissovellukset ei välttämättä myöskään t
   <string name="start_new_fingerprint_tips">"Käytä Toisen tilan sormenjälkeä
 siirtyäksesi Toiseen tilaan Lukitusnäytöltä"</string>
   <string name="start_setting_guide_desc_title">Muutama asia, jotka täytyy asettaa</string>
-  <string name="stop_xspace_alert_content">Poistit kaikki kaksoissovellukset. Poistetaanko myös kaksoissovelluksien tilit ja sovellustiedot? Tämän jälkeen joudut luomaan kaksoissovellukset uudelleen jos tarvitset niitä.</string>
+  <string name="stop_xspace_alert_content">Kaikki kaksoissovellukset ja niiden tiedot poistetaan pysyvästi. Sinun täytyy käynnistää laitteesi uudelleen ottaaksesi muutokset käyttöön. Poistetaanko tilit nyt?</string>
   <string name="stop_xspace_alert_title">Kaksoissovelluksien tilien poistaminen</string>
   <string name="summary_switch_apps_settings">Valitse nykyisessä tilassa käytettävät sovellukset</string>
   <string name="support_desc">Tietoturvapalvelut tarjoaa Spaces Mobile</string>
@@ -430,6 +430,7 @@ Jotkut kaksoissovellukset vaativat Google Services Frameworkin tuen. Näissä ta
   <string name="xspace_label">Kaksoissovellukset</string>
   <string name="xspace_loading_msg">Ladataan sovelluksia…</string>
   <string name="xspace_qq_title">QQ</string>
+  <string name="xspace_remove">Poista kaksoissovelluksien tilit</string>
   <string name="xspace_setting_label">Kaksoissovelluksien asetukset</string>
   <string name="xspace_uninstall_completed">Kaksoissovellus poistettiin onnistuneesti</string>
   <string name="xspace_uninstall_dialog_content">Kaksoissovelluksen poistaminen poistaa myös kaikki sovellustiedot.</string>
